# komorebi

./: .dockerignore  .gitignore  Dockerfile  deploy.sh  main.py  pyproject.toml
.github/workflows/: deploy.yaml
config/: asgi.py  settings.py  wsgi.py
core/: settings.py  urls.py
scraper/: admin.py  auth.py  models.py  services.py  urls.py  utils.py  views.py
scraper/migrations/: 0001_initial.py  0002_remove_scraperconfig_playlist_path_and_more.py  0003_scraperconfig_show_name_selector.py  0004_remove_scraperconfig_use_json_data_and_more.py  0005_alter_scraperconfig_scraper_type.py  0006_alter_scraperconfig_scraper_type.py  0007_scraperconfig_parsing_strategy_and_more.py  0008_rename_spotify_uri_scrapedtrack_youtube_id.py
scraper/static/scraper/css/: style.css
scraper/static/scraper/js/: main.js  playlistToggler.js  spinnerLogic.js  tailwind-config.js
scraper/templates/scraper/: index.html
scraper/templates/scraper/partials/: auth_section.html  playlists.html  results_card.html  spotify_popup_close.html
