[project]
name = "komorebi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.3",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "spotipy>=2.26.0",
    "thefuzz>=0.22.1",
]
