[project]
name = "komorebi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "spotipy>=2.26.0",
    "thefuzz>=0.22.1",
    "uvicorn>=0.42.0",
    "whitenoise>=6.12.0",
]
